# posture-risk-mining-by-Huaytalla

./: .gitignore  README.md  environment.yml  pyproject.toml  setup_repo.sh
configs/: default.yaml  experiments.yaml
docs/: README_branch.md  experiments_log.md  recovery_plan.md  zero_leakage_validation.md
docs/experiments/: feature-engineering-v1.md  reporte_AB_semana6.md
logs/: metrics_experimentos.csv
notebooks/: 01_eda_pamap2.ipynb  01_eda_pamap2.py  02_baseline_model.ipynb  02_baseline_model.py  03_ab_experiments.ipynb  03_ab_experiments.py  03_experimentos_ab.ipynb  04_experimentos_other_models.ipynb  04_experimentos_other_models.py  04_sprint2_validation.ipynb  04_sprint2_validation.py
reports/: ab_comparison_table.csv  baseline_summary.csv
reports/experiments/: baseline_summary.json  comparison_table.csv  comparison_table.md  var_a_only_temporal_summary.json  var_b_svm_linear_summary.json
src/posture_risk/experiments/: __init__.py  ab_runner.py  compare.py  diagnostics.py  logger.py  prepare_biomech_dataset.py  reporting.py  runner.py  validation.py
src/posture_risk/features/: biomechanical.py  spectral.py  temporal.py
src/posture_risk/ingestion/: loaders.py  pipeline.py
tests/: test_features.py
