[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "posture-risk-mining"
version = "0.1.0"
description = "Transfer learning para detección de posturas riesgosas en operadores perforistas"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "h5py>=3.11",
    "pyyaml>=6.0",
    "loguru>=0.7",
    "tqdm>=4.66",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "click>=8.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
